[package]
name = "gugugaga"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version="0.3.18", features = ["chrono"] }
chrono = "0.4.39"
clap = { version = "4.5", features = ["derive"] }
google-drive3 = "*"
serde = "1"
serde_json = "1"
yup-oauth2 = "12.1.2"
home-dir = "0.1.0"
hyper-rustls = "0.27.7"
hyper-util = "0.1.19"
http-body-util = "0.1.3"
miette = { version="7.6.0", features=["fancy"] }
knuffel = "3.2.0"
anyhow = "1.0.100"
